<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>sensor_bands_gui</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="ipujol10@gmal.com">inaki</maintainer>
	<license>TODO: License declaration</license>

	<exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>pyqtgraph</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>pynput</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
